--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@fortawesome/fontawesome-free": "5.15.3",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -27,12 +31,14 @@
     "jest": "^27.0.5",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie <= 10"
   ],
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest"
