--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.4.4",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@vue/composition-api": "^1.6.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
